# devin_stock

./: README.md  pyproject.toml
app/: .env  pyproject.toml  requirements.txt  start.sh
app/stock_analysis/: database.py  init_db.py  main.py  models.py  services.py  wsgi.py
frontend/: .env
frontend/src/: App.tsx
frontend/src/components/: ROIChart.tsx  TopInvestments.tsx
frontend/src/lib/: api.ts
